CRUD de laboratorio y orden de compra

--- a/S11/SPRING_DATA_JPA/src/main/resources/application.properties
+++ b/S11/SPRING_DATA_JPA/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=SPRING_DATA_JPA
+spring.datasource.url=jdbc:mysql://localhost:3306/bd_Farmacia?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
