--- a/S12/S12_APLI01/src/main/resources/application.properties
+++ b/S12/S12_APLI01/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=S12_APLI01
 
-spring.datasource.url=jdbc:mysql://localhost:3306/estudiantesdb?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 server.port=${PORT:8080}
