--- a/S12/S12_APLI01/src/main/resources/application.properties
+++ b/S12/S12_APLI01/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=S12_APLI01
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql://dpg-d137j3umcj7s73825afg-a:5432/estudiantes_db
+spring.datasource.username=estudiantes_db_user
+spring.datasource.password=kdwNbCgzJDnTlq9uiCE3nTMvCIv0hycx
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
