--- a/S15/WS_SPRING_BOOT_ANGULAR/src/main/resources/application.properties
+++ b/S15/WS_SPRING_BOOT_ANGULAR/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=WS_SPRING_BOOT_ANGULAR
 
-spring.datasource.url=jdbc:mysql://localhost:3306/comercial?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://dpg-d137j3umcj7s73825afg-a.oregon-postgres.render.com:5432/estudiantes_db
+spring.datasource.username=estudiantes_db_user
+spring.datasource.password=kdwNbCgzJDnTlq9uiCE3nTMvCIv0hycx
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.thymeleaf.cache=false
+
+server.port=${PORT:8080}
